--- a/BaigorriaJuan/Views/Actors/Index.cshtml
+++ b/BaigorriaJuan/Views/Actors/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-8 offset-md-2">
 
-        <table>
+        <table class="table">
             <thead>
                 <tr>
                     <th>@Html.DisplayNameFor(model =>model.ProfilePictureURL)</th>>
@@ -30,9 +30,9 @@
                             @Html.DisplayFor(modelItem => item.Bio)
                         </td>
                         <td class="aling-middle">
-                            <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit </a>
-                            <a class="btn btn-outline-info"><i class="bi bi-eye"></i>Detalles </a>
-                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i>Eliminar </a>
+                            <a class="btn btn-outline-primary"><i class="bi bi-pencil-square"></i>Edit </a>  |
+                            <a class="btn btn-outline-info"><i class="bi bi-eye"></i>Detalles </a>  |
+                            <a class="btn btn-danger text-white"><i class="bi bi-trash"></i>Eliminar </a>  
                         </td>
                     </tr>
                 }
