--- a/BaigorriaJuan/Views/Producers/Index.cshtml
+++ b/BaigorriaJuan/Views/Producers/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<Actor>
+﻿@model IEnumerable<Producer>
 
 @{
-    ViewData["Titulo"] = "Lista de Actores";
+    ViewData["Titulo"] = "Lista de Productores";
 }
 
 <div class="row">
