--- a/BaigorriaJuan/Views/Actors/Index.cshtml
+++ b/BaigorriaJuan/Views/Actors/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Actor>
 
 @{
-    ViewData["Titulo"] = "Lista de Actores";
+    ViewData["title"] = "Lista de Actores";
 }
 
 <div class="row">
