--- a/BaigorriaJuan/Views/Movies/Index.cshtml
+++ b/BaigorriaJuan/Views/Movies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Movie>
+﻿@model IEnumerable<NewMovieVM>
 
 @{
     ViewData["title"] = "Listado de Peliculas";
@@ -51,7 +51,8 @@
                     <div class="col-md-12">
                         <div class="card-footer ">
                             <p class="card-text">
-                                <a class="btn btn-outline-primary float-right"><i class="bi bi-eye-fill"></i> Ver Detalles</a>
+                                <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
+                                    <i class="bi bi-eye-fill"></i> Ver Detalles</a>
                                 <a class="btn btn-success text-white"><i class="bi bi-cart-plus"></i> Agregar al Carrito (Precio @item.Price.ToString("c"))</a>
                             </p>
                         </div>
