--- a/BaigorriaJuan/Views/Movies/Create.cshtml
+++ b/BaigorriaJuan/Views/Movies/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@using BaigorriaJuan.Data.Enums;
-@model NewMovieVM1 
+@model NewMovieVM 
 
 @{
     ViewData["Title"] = "Crear una nueva pelicula";
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-md-8 offset-2">
         <p>
-            <h4>Agregar una nueva pelicula</h4>
+            <h4>Create a new movie</h4>
         </p>
 
         <div class="row">
