--- a/BaigorriaJuan/Views/Movies/Details.cshtml
+++ b/BaigorriaJuan/Views/Movies/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model NewMovieVM
+﻿@model Movie
 
 @{
     ViewData["Title"] = "Detalles de la Pelicula";
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img src="@Model.ImageURL" width="100%" alt="@Model.Name">
+                    <img src="@Model.ImageURL" width="90%" alt="@Model.Name">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
