--- a/BaigorriaJuan/Views/Movies/Index.cshtml
+++ b/BaigorriaJuan/Views/Movies/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<NewMovieVM>
+﻿@model Movie
 
 @{
-    ViewData["title"] = "Listado de Peliculas";
+    ViewData["Title"] = "List of Movies";
 }
 
 <div class="row">
@@ -21,28 +21,28 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="@item.ImageURL" width="100%" alt="@item.Name">
+                        <img src="@item.ImageURL" width="900%" alt="@item.Name">
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
                             <p class="card-text">@item.Description</p>
-                            <p class="card-text"><b>Cine: </b>@item.Cinema.Name</p>
-                            <p class="card-text"><b>Categoría: </b>@item.MovieCategory</p>
-                            <p class="card-text"><b>Fecha de Inicio: </b>@item.StartDate.ToString("dd MMM yy")</p>
-                            <p class="card-text"><b>Fecha de Finalización: </b>@item.EndDate.ToString("dd MMM yy")</p>
+                            <p class="card-text"><b>Cinema: </b>@item.Cinema.Name</p>
+                            <p class="card-text"><b>Category: </b>@item.MovieCategory</p>
+                            <p class="card-text"><b>Start Date: </b>@item.StartDate.ToString("dd MMM yy")</p>
+                            <p class="card-text"><b>End Date: </b>@item.EndDate.ToString("dd MMM yy")</p>
                             <p class="card-text ">
-                                <b>Estado: </b>
+                                <b>Status: </b>
                                 @if (DateTime.Now >= item.StartDate && DateTime.Now <= item.EndDate)
                                 {
-                                    <span class="badge bg-success text-white">DISPONIBLE</span>
+                                    <span class="badge bg-success text-white">AVAILABLE</span>
                                 }
                                 else if (DateTime.Now > item.EndDate)
                                 {
-                                    <span class="badge bg-danger text-white">EXPIRADO</span>
+                                    <span class="badge bg-danger text-white">EXPIRED</span>
                                 }
                                 else
                                 {
-                                    <span class="badge bg-primary text-white">PRÓXIMO</span>
+                                    <span class="badge bg-primary text-white">UPCOMING</span>
                                 }
                             </p>
 
@@ -52,8 +52,9 @@
                         <div class="card-footer ">
                             <p class="card-text">
                                 <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
-                                    <i class="bi bi-eye-fill"></i> Ver Detalles</a>
-                                <a class="btn btn-success text-white"><i class="bi bi-cart-plus"></i> Agregar al Carrito (Precio @item.Price.ToString("c"))</a>
+                                    <i class="bi bi-eye-fill"></i> Show Details
+                                </a>
+                                <a class="btn btn-success text-white"><i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
                             </p>
                         </div>
                     </div>
@@ -62,4 +63,5 @@
         </div>
     }
 </div>
- 
+
+@await Html.PartialAsync("_CreateItem", "Movies") 
